Vulnerable sector police checks

--- a/index.html
+++ b/index.html
@@ -549,6 +549,7 @@
                 <li>Committed and dedicated to the task </li>
                 <li>Comfortable with working with kids and pre-teens </li>
                 <li>Maintaining good academic grades and communication skills! </li>
+                <li>Vulnerable sector police checks required for tutors 18 and upu</li>
               </ul>
               <a
                 href="https://docs.google.com/forms/d/e/1FAIpQLSecAWrA9XmRFuKeeElm8SS5E09MsU5nLyrujhs0FRg2w1Glnw/viewform"><button
